Uplift quartz to 2.3.2